Made players immutable lists, and added a stream collector for immutable lists